Added the Oxidizer block, entity, GUI, and other misc stuff

--- a/src/main/resources/assets/phenoltest/lang/en_us.json
+++ b/src/main/resources/assets/phenoltest/lang/en_us.json
@@ -7,6 +7,8 @@
   "item.phenoltest.oxidizer": "Oxidizer",
 
   "item.phenoltest.phena_detector": "Phena Detector",
+  "item.phenoltest.sulfur": "Sulfur",
+  "item.phenoltest.sulfuric_acid": "Sulfuric Acid",
 
   "block.phenoltest.phena_ore": "Phena Ore",
   "item.phenoltest.raw_phena": "Raw Phena",
